# Case-Study-2

./: .gitignore  README.md  pyproject.toml
backend/: backend.py  deploy_backend.sh  memory_manager.py  requirements.txt  response_manager.py  schemas.py
backend/src/: backend.py  config.py  response_manager.py  schemas.py
frontend/: api.py  app.py  deploy_frontend.sh  requirements.txt
frontend/components/: SettingsSidebar.py
frontend/src/: api.py  app.py
frontend/src/components/: SettingsSidebar.py
scripts/: deploy_backend.sh  deploy_frontend.sh  monitor.sh
