[project]
name = "case-study-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime>=6.0",
    "fastapi>=0.133.1",
    "gradio>=6.7.0",
    "requests>=2.32.5",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "typing>=3.10.0.0",
    "uuid>=1.30",
]
